# envfmt

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: lib.rs
